Re-organize packages
- renamed "chemistry" to "chem"
- created "action" package

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,7 +27,7 @@
 
   </extensions>
   <actions>
-    <action id="plugin.ShowMoleculeAction" class="plugin.ShowMoleculeAction" text="Show Molecule"
+    <action id="plugin.action.ShowMoleculeAction" class="plugin.action.ShowMoleculeAction" text="Show Molecule"
             description="To show a drawn molecule defined by the selected text">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
     </action>
