Show popup even if no text selection
If no text is selected, but the cursor points to a molecule string,
it's now possible to show the popup for that molecule.

Also, a keyboard shortcut was added to simplify testing.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,7 @@
     <action id="plugin.action.ShowMoleculeAction" class="plugin.action.ShowMoleculeAction" text="Show Molecule"
             description="To show a drawn molecule defined by the selected text">
       <add-to-group group-id="ToolsMenu" anchor="last"/>
+      <keyboard-shortcut keymap="$default" first-keystroke="control alt shift M"/>
     </action>
   </actions>
 </idea-plugin>
